Escape brew command substitution in update-homebrew-formula workflow
- Prevents premature evaluation of the brew prefix in the generated Homebrew formula.
- Ensures the literal "$(brew --prefix ch)" string is preserved for correct usage.

--- a/.github/workflows/update-homebrew-formula.yml
+++ b/.github/workflows/update-homebrew-formula.yml
@@ -73,7 +73,7 @@ jobs:
                   ~/.config/ch.sh/theme.json
 
                 If this file doesn't exist it will use the default theme
-                  $(brew --prefix ch)/share/ch/theme.json
+                  \$(brew --prefix ch)/share/ch/theme.json
               EOS
             end
           end
